verify contrast compliance and close issue #6

--- a/bs/bootstrap-overrides.css
+++ b/bs/bootstrap-overrides.css
@@ -69,7 +69,7 @@
   --bs-dark-border-subtle: var(--CTBS-DarkBorderSubtle);
   --bs-white-rgb: var(--CTBS-WhiteRgb);
   --bs-black-rgb: var(--CTBS-BlackRgb);
-  --bs-gradient: linear-gradient(180deg, var(--CTBS-Gradient-1), var(--CTBS-Gradient));
+  --bs-gradient: linear-gradient(180deg, var(--CTBS-Gradient), var(--CTBS-Gradient-1));
   --bs-body-color: var(--CTBS-BodyColor);
   --bs-body-color-rgb: var(--CTBS-BodyColorRgb);
   --bs-body-bg: var(--CTBS-BodyBg);
@@ -775,8 +775,8 @@
   backdrop-filter: blur(var(--CTBS-GlassBlur));
 }
 .placeholder-wave {
-  -webkit-mask-image: linear-gradient(130deg, var(--CTBS-WebkitMaskImage-1) 55%, var(--CTBS-WebkitMaskImage) 75%, var(--CTBS-WebkitMaskImage-1) 95%);
-  mask-image: linear-gradient(130deg, var(--CTBS-MaskImage-1) 55%, var(--CTBS-MaskImage) 75%, var(--CTBS-MaskImage-1) 95%);
+  -webkit-mask-image: linear-gradient(130deg, var(--CTBS-WebkitMaskImage) 55%, var(--CTBS-WebkitMaskImage-1) 75%, var(--CTBS-WebkitMaskImage) 95%);
+  mask-image: linear-gradient(130deg, var(--CTBS-MaskImage) 55%, var(--CTBS-MaskImage-1) 75%, var(--CTBS-MaskImage) 95%);
 }
 .text-bg-primary {
   color: var(--CTBS-Color-1) !important;
